--- a/SORTEIO/index.html
+++ b/SORTEIO/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>QUAL É IRMAOOO</h1>
+    <a href="Lindex.html">Sorteio de nomes</a>
+    <a href="Nindex.html">Sorteio de numeros</a>
 </body>
 </html>
