--- a/SORTEIO/Lindex.html
+++ b/SORTEIO/Lindex.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="Lstyle.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
             <div class="container">
                 <h2>SORTEAR NOMES</h2>
                 <div class="linha"></div>
-                <div class="formulario container">
+                <div class="formulario-container">
                     <label for="entradaNomes">
                         Adicione os nomes para o sorteio
                     </label>
@@ -26,7 +27,7 @@
             </div>
         </section>
     </main>
-    <script src="main.js"></script>
+    <script src="Lmain.js"></script>
 </body>
 
 </html>
