--- a/SORTEIO/Nindex.html
+++ b/SORTEIO/Nindex.html
@@ -29,7 +29,7 @@
         <div id="resultado"></div>
     </div> 
 </div>
-    <script src="main.js"></script>
+    <script src="Nmain.js"></script>
 </body>
 
 </html>
