--- a/SORTEIO/index.html
+++ b/SORTEIO/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt=br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>QUAL É IRMAOOO</h1>
-    <a href="Lindex.html">Sorteio de nomes</a>
-    <a href="Nindex.html">Sorteio de numeros</a>
+    <section>
+        <div class="Conteudo">
+        <h1>ESCOLHA UM</h1>
+        <a href="Lindex.html">Sorteio de nomes</a>
+        <a href="Nindex.html">Sorteio de numeros</a>
+    </div>
+
+    </section>
+    
+
 </body>
+
 </html>
